# cursor_scan

./: .gitignore  CMakeLists.txt  FILE_STRUCTURE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STATIC_LINKING.md  build.bat  cursor_info_collector.c  cursor_info_collector.h  example_output.json  run.bat
